IJPL-35314 [*]: rewritting initialization of default loggers
Moving out fringe logic, introducing a console log level property, and flipping the default (console logging is off unless explicitly asked)

GitOrigin-RevId: 563c47540859a9603fd72b65d34c009640a9825d